Changed the style a bit

--- a/styles.css
+++ b/styles.css
@@ -32,43 +32,76 @@ a:hover{
   position: relative;
 }
 .drumKitImg{
- width: 50%;
+ padding: 0;
+ width: 60%;
  filter: drop-shadow(0 0 10rem #DA0463);
+}
+
+.drumKitAnimation{
+  filter: drop-shadow(0 0 10rem #b80153);
+}
+
+.drum {
+  outline: none;
+  /* added */
+  /* position: absolute; */
+  border: 10px solid #404B69;
+  font-size: 200%;
+  font-family: 'Arvo', cursive;
+  line-height: 0;
+  font-weight: 900;
+  color: #DA0463;
+  text-shadow: 3px 0 #DBEDF3;
+  border-radius: 15px;
+  display: inline-block;
+  /* width: 7%;
+  height: 19%; */
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  margin: 10px;
+  background-color: white;
 }
 
 .w {
   /* background-image: url("images/tom1.png"); */
   /* position: absolute;
-  top: 45%;
-  left: 33.5%; */
+  top:63%;
+    left: 33%;;
+  z-index: 1; */
 }
 .a {
-  background-image: url("images/tom2.png");
+  /* background-image: url("images/tom2.png"); */
+  /* position: absolute;
+  top:43%;
+    left: 37%;;
+  z-index: 1; */
 }
 
 .s {
-  background-image: url("images/tom3.png");
+  /* background-image: url("images/tom3.png"); */
 }
 
 .d {
-  background-image: url("images/tom4.png");
+  /* background-image: url("images/tom4.png"); */
 }
 
 .j {
-background-image: url("images/snare.png");
+/* background-image: url("images/snare.png"); */
 }
 
 .k {
-  background-image: url("images/crash.png");
+  /* background-image: url("images/crash.png"); */
 }
 
 .l {
-  background-image: url("images/kick.png");
+  /* background-image: url("images/kick.png"); */
 }
 
 .set {
-  position: absolute;
-  margin: 10% auto;
+  margin: 0% auto;
+  padding: 0;
+  padding-bottom: 20px;
 }
 
 .game-over {
@@ -85,25 +118,7 @@ background-image: url("images/snare.png");
   color: red;
 }
 
-.drum {
-  outline: none;
-  border: 10px solid #404B69;
-  font-size: 400%;
-  font-family: 'Arvo', cursive;
-  line-height: 0;
-  font-weight: 900;
-  color: #DA0463;
-  text-shadow: 3px 0 #DBEDF3;
-  border-radius: 15px;
-  display: inline-block;
-  /* width: 7%;
-  height: 19%; */
-  width: 80px;
-  height: 80px;
-  text-align: center;
-  margin: 10px;
-  background-color: white;
-}
+
 
 .imgNima{
   width: 1.5rem;
