--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ a:hover{
 .drumKitImg{
  padding: 0;
  width: 40%;
- transition: all 0.2s ease-in-out;
+ /* transition: all 0.2s ease-in-out; */
  filter: drop-shadow(0 0 10rem #DA0463);
 
 }
