--- a/styles.css
+++ b/styles.css
@@ -36,15 +36,19 @@ a:hover{
 .drumKitImg{
  padding: 0;
  width: 40%;
- /* transition: all 0.2s ease-in-out; */
+ transition: all 0.2s ease-in-out;
  filter: drop-shadow(0 0 10rem #DA0463);
-
 }
-
 .drumKitAnimation{
   filter: drop-shadow(20px 20px 5rem #DA0463);
-}
+} 
 
+
+@media (pointer:none), (pointer:coarse) {
+  .drumKitAnimation{
+    filter: drop-shadow(0 0 10rem #DA0463);
+  } 
+}
 
 .w {
   background-image: url("images/tom1.png");
@@ -84,24 +88,6 @@ background-image: url("images/snare.png");
   margin: 0% auto;
   padding: 0;
   padding-bottom: 20px;
-}
-
-.drum {
-  outline: none;
-  border: 5px solid #404B69;
-  font-size: 200%;
-  font-family: 'Arvo', cursive;
-  line-height: 0;
-  font-weight: 900;
-  color: #DA0463;
-  text-shadow: 3px 0 #DBEDF3;
-  border-radius: 15px;
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-  text-align: center;
-  margin: 10px;
-  background-color: white;
 }
 
 .game-over {
