--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,24 @@ background-image: url("images/snare.png");
   padding-bottom: 20px;
 }
 
+.drum {
+  outline: none;
+  border: 5px solid #404B69;
+  font-size: 200%;
+  font-family: 'Arvo', cursive;
+  line-height: 0;
+  font-weight: 900;
+  color: #DA0463;
+  text-shadow: 3px 0 #DBEDF3;
+  border-radius: 15px;
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  margin: 10px;
+  background-color: white;
+}
+
 .game-over {
   background-color: red;
   opacity: 0.8;
